# wstunnel

./: .goreleaser.yaml  README.md  justfile
.github/workflows/: release.yaml
docs/: client-config.sample.toml
docs/superpowers/plans/: 2026-06-20-client-toml-config.md
docs/superpowers/specs/: 2026-06-20-client-toml-config-design.md
wstunnel/: Cargo.toml
wstunnel-cli/: Cargo.toml
wstunnel-cli/src/: main.rs
wstunnel/src/: config.rs  lib.rs
wstunnel/src/tunnel/server/: server.rs
wstunnel/src/tunnel/transport/: types.rs
