[package]
name = "webtop-cli"
version = "1.0.2"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
fdlimit = "0.3.0"
tokio = { version = "1.52.1", features = ["full"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "local-time"] }
webtop = { path = "../wstunnel", default-features = false, features = ["clap"] }

tikv-jemallocator = { version = "0.6", optional = true }

[features]
default = ["aws-lc-rs"]
jemalloc = ["dep:tikv-jemallocator"]
aws-lc-rs = ["webtop/aws-lc-rs"]
ring = ["webtop/ring"]
aws-lc-rs-bindgen = ["webtop/aws-lc-rs-bindgen"]

[[bin]]
name = "webtop"
path = "src/main.rs"
